fixed some alignment issues

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ header {
 .category-selector, .display-controls {
     display: flex;
     align-items: center;
+    justify-content: center;
     flex: 1 1 100%;
     flex-wrap: wrap;
     gap: 10px;
